force-app/main/default/objects/IndicoAPICredentials__c/IndicoAPICredentials__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Indico API Credentials</label>
</CustomObject>