force-app/main/default/objects/IndicoAPICredentials__c/fields/Email_Text_Model_Id__c.field-meta.xml
<CustomField>
    <fullName>Email_Text_Model_Id__c</fullName>
    <label>Email Text Model Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>