force-app/main/default/objects/IndicoAPICredentials__c/fields/Sentiment_Endpoint_URL__c.field-meta.xml
<CustomField>
    <fullName>Sentiment_Endpoint_URL__c</fullName>
    <label>Sentiment Endpoint URL</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>