force-app/main/default/objects/IndicoAPICredentials__c/fields/Text_Labeling_Endpoint_URL__c.field-meta.xml
<CustomField>
    <fullName>Text_Labeling_Endpoint_URL__c</fullName>
    <label>Text Labeling Endpoint URL</label>
    <length>100</length>
    <type>Text</type>
</CustomField>